--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -56,7 +57,7 @@
     <!--header-->
     <header class="py-md-5 d-flex align-items-center justify-content-center">
         <div class="container ">
-            <div class="row my-5 align-items-center header flex-column flex-sm-row">
+            <div class="row my-5 align-items-center header flex-column flex-sm-row" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                 <div class="col-12 col-md-8 ps-4 pe-4 ps-md-0 pe-md-0">
                     <h1 class="h-grupo display-4 pb-2 lh-1">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
                     <p class="p-grupo fs-5">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca
@@ -74,10 +75,10 @@
         <section>
             <div class="container">
                 <div class="row align-items-center flex-column flex-sm-row">
-                    <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0">
+                    <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="Cacto e sol">
                     </div>
-                    <div class="col-12 col-md-8 col-projetos my-4 mb-md-0 px-4 px-md-5">
+                    <div class="col-12 col-md-8 col-projetos my-4 mb-md-0 px-4 px-md-5" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="h-projetos display-3">Projeto ONGs na Web</h2>
                         <p class="p-projetos fs-5">
                             O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não
@@ -98,14 +99,14 @@
         <section class="equipe-simios">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 mb-2 mb-md-5 mt-5 px-4 px-md-5">
+                    <div class="col-12 mb-2 mb-md-5 mt-5 px-4 px-md-5" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="title-equipe display-3">Equipe</h2>
                         <p class="p-equipe fs-5">Conheça o time responsável pela criação e desenvolvimento do site do Grupo
                             de Idosos Viver Mais.</p>
                     </div>
                 </div>
                 <!-- Carrossel Colaboradores Mobile -->
-                <div id="carouselSimiosAutoplaying" class="carousel slide d-md-none" data-bs-ride="carousel">
+                <div id="carouselSimiosAutoplaying" class="carousel slide d-md-none" data-bs-ride="carousel" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="7000">
                             <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-5 mx-md-2"
@@ -223,7 +224,7 @@
                 <!-- Lista de Colaboradores DeskTop -->
                 <div class="row align-items-center d-none d-md-flex justify-content-center gap-5">
                     <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/ana.png"
                             alt="Foto Ana Martins Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -232,7 +233,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe2 card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/erick.png"
                             alt="Foto Erick Rosa Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -241,7 +242,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/gabriel.png"
                             alt="Foto Gabriel Santiago Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -250,7 +251,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/luis.png"
                             alt="Foto Luís Duarte Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -259,7 +260,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/melissa.png"
                             alt="Foto Melissa Almeida Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -268,7 +269,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/joao.png"
                             alt="Foto João Arruda Grupo Símios" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -277,7 +278,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/julie.png"
                             alt="Foto da colaboradora Julie" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -286,7 +287,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/juan.png"
                             alt="Foto do colaborador Juan" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -295,7 +296,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 card-equipe card border-0 rounded-4 mx-auto mb-md-5 mx-md-2"
-                        style="width: 18.125rem; height: 21.312rem;">
+                        style="width: 18.125rem; height: 21.312rem;" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="rounded-circle mx-auto mt-4" src="./img/grupo-simios/leonarda.png"
                             alt="Foto da colaboradora Leonarda" style="width: 10rem; height: 10rem;">
                         <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
@@ -384,7 +385,7 @@
     <footer class="mt-5">
         <div class="rodape">
             <div class="container">
-                <div class="row align-items-center py-5">
+                <div class="row align-items-center py-5" data-aos="fade" data-aos-duration="2000" data-aos-once="true">
                     <div class="col-12 col-md-5">
                         <img class="img-fluid rodape-marca" width="100px" src="./img/logo/logo-marca.png"
                             alt="Logo marca do Grupo Viver Mais">
@@ -441,6 +442,11 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
