--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -59,7 +60,7 @@
     </nav>
     <header>
         <div class="container-fluid">
-            <div class="row align-items-end align-items-xl-center header flex-column flex-sm-row">
+            <div class="row align-items-end align-items-xl-center header flex-column flex-sm-row" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                 <div class="col p-4 py-5 mt-4 mt-md-0 ps-sm-5 ms-xl-4">
                     <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
                     <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia e longevidade!</p>
@@ -80,10 +81,10 @@
         <section class="bg-white" id="quem-somos">
             <div class="container">
                 <div class="row align-items-center about">
-                    <div class="col-4 mt-5 mb-0 mb-lg-5 quem-somos text-center">
+                    <div class="col-4 mt-5 mb-0 mb-lg-5 quem-somos text-center" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img src="./img/cacto.png" alt="Cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
-                    <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-4 p-md-5 pt-4">
+                    <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-4 p-md-5 pt-4" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="h2-quem display-3">Quem Somos</h2>
                         <p class="p-quem text-black fs-5">
                             O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade
@@ -103,10 +104,10 @@
         <section class="proposito">
             <div class="container-fluid p-4 p-sm-5">
                 <div class="row">
-                    <div class="col-12 col-md-4 d-flex align-items-center text-start pb-4 pb-md-0">
+                    <div class="col-12 col-md-4 d-flex align-items-center text-start pb-4 pb-md-0" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="text-conheca display-3 lh-1">Conheça nossos Propósitos</h2>
                     </div>
-                    <div class="col-12 col-md-8 d-flex justify-content-center flex-column flex-md-row gap-5 m-auto">
+                    <div class="col-12 col-md-8 d-flex justify-content-center flex-column flex-md-row gap-5 m-auto" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <div class="card missao text-center rounded-4 shadow border-0">
                             <div class="card-body">
                                 <img src="./img/icons/flecha-e-alvo.svg" class="img-fluid pt-3 pb-3" alt="Flecha"
@@ -144,10 +145,10 @@
         <section>
             <div class="container">
                 <div class="row align-items-center flex-column flex-sm-row">
-                    <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0">
+                    <div class="col-12 col-md-4 mt-5 col-projetos text-center pb-0" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="Cacto e Sol">
                     </div>
-                    <div class="col-12 col-md-6 col-projetos my-4 mb-md-0 px-4 px-sm-5">
+                    <div class="col-12 col-md-6 col-projetos my-4 mb-md-0 px-4 px-sm-5" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="h-projetos display-3">Projetos</h2>
                         <p class="p-projetos fs-5">
                             Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre
@@ -164,7 +165,7 @@
         <section class="atividades">
             <div class="container-fluid">
                 <div class="row align-items-center flex-column flex-sm-row">
-                    <div class="col-5 px-4 px-sm-5 py-md-0 m-0 mt-4 mb-4 text-atividades">
+                    <div class="col-5 px-4 px-sm-5 py-md-0 m-0 mt-4 mb-4 text-atividades" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="display-3 h2-atividades">Atividades</h2>
                         <p class="p-atividades fs-5">
                             Descubra sorrisos e participação ativa, conheça as vibrantes atividades
@@ -176,7 +177,7 @@
                     <!--carrossel grande e extra grande-->
                     <div id="carouselAutoplaying"
                         class="carousel slide col-7 p-0 d-none d-md-block d-lg-block d-xl-block"
-                        data-bs-ride="carousel">
+                        data-bs-ride="carousel" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="7000">
                                 <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100"
@@ -207,7 +208,7 @@
                     <!--carrossel pequena e média-->
                     <div id="carouselMobileAutoplaying"
                         class="carousel slide carrossel col-7 p-0 d-block d-md-none d-lg-none d-xl-none"
-                        data-bs-ride="carousel">
+                        data-bs-ride="carousel" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="7000">
                                 <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100"
@@ -243,7 +244,7 @@
         <section>
             <div class="container-fluid">
                 <div class="row align-items-end align-items-lg-center">
-                    <div class="col-12 col-md-5 pb-0 pb-md-5 px-4 px-sm-5 py-5">
+                    <div class="col-12 col-md-5 pb-0 pb-md-5 px-4 px-sm-5 py-5" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <h2 class="display-3 title-equipe">Nossa Equipe</h2>
                         <p class="p-equipe fs-5">
                             O Grupo de Idosos Viver mais conta com uma equipe multidisciplinar pronta
@@ -253,7 +254,7 @@
                             Nossos profissionais são: Psicólogos, Fisioterapeutas, etc etc tec (tem que perguntar)
                         </p>
                     </div>
-                    <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end">
+                    <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                         <img class="img-fluid" src="./img/maos-dadas.png" alt="Mãos dadas">
                     </div>
                 </div>
@@ -262,7 +263,7 @@
         <!--apoia-->
         <section class="apoia pt-4" id="apoia">
             <div class="row container-fluid align-items-end pe-0">
-                <div class="col-12 text-apoia text-black col-md-6 py-4 mb-md-3 mb-0 px-4 px-sm-5">
+                <div class="col-12 text-apoia text-black col-md-6 py-4 mb-md-3 mb-0 px-4 px-sm-5" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                     <h2 class="h2-apoia display-5">Apoie o GIVM</h2>
                     <p class="p-apoia text-black">
                         Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
@@ -272,7 +273,7 @@
                     </p>
                 </div>
                 <div
-                    class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
+                    class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                     <img src="img/qr-code.png" alt="QR Code do Pix" width="120" class="rounded-4">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
@@ -417,7 +418,7 @@
     <footer class="mt-5">
         <div class="rodape">
             <div class="container">
-                <div class="row align-items-center py-5">
+                <div class="row align-items-center py-5" data-aos="fade" data-aos-duration="2000" data-aos-once="true">
                     <div class="col-12 col-md-5">
                         <img class="img-fluid rodape-marca" width="100px" src="./img/logo/logo-marca.png"
                             alt="Logo marca do Grupo Viver Mais">
@@ -473,8 +474,10 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
