--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                             Estatuto
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item" id="navTransparencia">
                         <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">
                             Transparência
                         </a>
-                    </li>
+                    </li>-->
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
                     <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#apoia"
@@ -155,7 +155,7 @@
                             alinhados com a nossa missão, visão e valores.
                         </p>
                         <p class="p-projetos fs-5">
-                            Alguns de nossos projetos: listar aqui 1, listar aqui 2, listar aqui 3.
+                            Alguns de nossos projetos: Oficina de de banda de fanfarra, coral de vozes, carimbó, oficina de pintura, Fisioterapia, Atendimentos Psicologicos, educação física e diversos outros voltados para o bem estar desta comunidade! 
                         </p>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                             para atender e focar na melhor forma de celebrar a vida.
                         </p>
                         <p class="p-equipe fs-5">
-                            Nossos profissionais são: Psicólogos, Fisioterapeutas, etc etc tec (tem que perguntar)
+                            Nossos profissionais são: Psicólogos, Fisioterapeutas, Educadores físicos, Professores de artes gerais e voluntários com diversas especialidades própias!
                         </p>
                     </div>
                     <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
@@ -326,16 +326,8 @@
                         aria-label="Fechar"></button>
                 </div>
                 <div class="modal-body">
-                    Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
-                    suspendisse. Erat amet dolor turpis quisque nunc tellus faucibus. Et enim amet nullam euismod tempor
-                    nisi. Feugiat mattis sed donec auctor vulputate mauris mauris ipsum. Erat euismod sed vitae diam
-                    magna dolor egestas nec. Amet egestas facilisis dignissim consequat senectus. At euismod ut arcu ut
-                    vivamus ac. Porttitor ipsum neque venenatis enim ipsum sit. Cras hendrerit mi quam eu ut sagittis
-                    est. Diam tortor ornare eu sapien dui molestie bibendum est sagittis. Adipiscing velit nulla feugiat
-                    ultrices eget turpis sed ultricies diam. Interdum sit duis et amet congue. Vitae imperdiet sed ac
-                    nullam et ultrices. Viverra varius praesent velit volutpat vitae dignissim turpis lectus amet.
-                    Euismod ut ultricies quisque nunc viverra lacus posuere morbi. Tortor feugiat sodales vestibulum
-                    tortor. Tortor mattis pretium nulla mattis erat a.
+                   Baixe o estatuto do Grupo Viver mais! o conjunto de leis que uma organização segue para sua administração e operação:
+                    <a href="/uploads/Estatuto Grupo Viver Mais.pdf" download class="btnEstatuto">Baixar PDF</a>
                 </div>
             </div>
         </div>
@@ -432,8 +424,8 @@
                             data-bs-target="#quemSomosModal">Quem Somos</a>
                         <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal"
                             data-bs-target="#estatutoModal">Estatuto</a>
-                        <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal"
-                            data-bs-target="#transparenciaModal">Transparência</a>
+                      <!--  <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal"
+                            data-bs-target="#transparenciaModal">Transparência</a>-->
                     </div>
                     <div class="col-12 col-md pt-4">
                         <h3 class="rodape-text">Contatos</h3>
